[package]
name = "eightsleep-pager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hmac = "0.13"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tower = "0.5"
